# OrpheusCPP

./: .gitignore  CMakeLists.txt  CMakePresets.json  main.cpp  vcpkg.json
include/: GuildConfigHandler.h  HandleEvents.h  JsonReader.h  Logger.h  main.h
src/: GuildConfigHandler.cpp  HandleEvents.cpp  JsonReader.cpp  Logger.cpp  main.cpp
